<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegEmail">

    <TextView
        android:id="@+id/enter_phone"
        style="@style/phone_no"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:gravity="left"
        android:text="@string/email_instructions" />

    <TextView
        android:id="@+id/email"
        style="@style/desc"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_below="@+id/enter_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/email_why"/>

    <EditText
        android:id="@+id/email_field"
        style="@style/field"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:inputType="textWebEmailAddress"
        />

    <Button
        android:id="@+id/proceed_btn"
        style="@style/btn"
        android:text="@string/proceed_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

</RelativeLayout>